--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         }
     ],
     "require": {
+        "drush/drush": "^10",
         "pantheon-upstreams/upstream-configuration": "*"
     },
     "conflict": {
