Fix composer.json https://www.google.com/

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     ],
     "require": {
-        "drush/drush": "^10"
+        "drush/drush": "^10",
         "pantheon-upstreams/upstream-configuration": "*"
     },
     "conflict": {
